--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -78,11 +78,13 @@
 .historyItemDetails ul{
     margin-top: 6px;
     list-style-position: inside;
-    font-size: 25px;
+    font-size: 15px;
     list-style-type: disc;
     margin-left: 17px;
 }
-
+.historyItemDetails p{
+    font-style: italic;
+}
 @media screen and (max-width:830px){
     .content{
         flex-direction: column;
